# dhis2-python

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dhis2_core/: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dhis2_core/dhis2/: __main__.py
dhis2_core/dhis2/core/: cli.py  inventory.py  utils.py
dhis2_core/dhis2/core/models/: property.py  schema.py
dhis2_core/dhis2/generate/: cli.py  json_schema.py
dhis2_core/dhis2/generator/: cli.py
dhis2_core/dhis2/openhie/: mcsd.py  svcm.py
dhis2_core/dhis2/openhie/resources/: mcsd.py
dhis2_core/examples/: dhis2-play-inventory.yml  mcsd-config.yml  svcm-config.yml
dhis2_core/src/dhis2/code_list/: cli.py  icd10.py  icd11.py  svcm.py  svcm_resources.py
dhis2_core/src/dhis2/code_list/models/: icd10.py  icd11.py  svcm.py
dhis2_core/src/dhis2/core/: cli.py  http.py  inspect.py  inventory.py  logging.py  utils.py
dhis2_core/src/dhis2/core/metadata/models/: __init__.py  base.py  property.py  system_info.py
dhis2_core/src/dhis2/e2b/: cli.py  common.py  e2b_resources.py  r2.py
dhis2_core/src/dhis2/e2b/models/: e2b.py
dhis2_core/src/dhis2/facility_list/: cli.py  mcsd.py  mcsd_resources.py
dhis2_core/src/dhis2/facility_list/models/: mcsd.py
dhis2_core/src/dhis2/generate/: cli.py  icd11.py  json_schema.py
dhis2_core/src/dhis2/openhie/: cli.py  mcsd.py  models.py  svcm.py
dhis2_core/src/dhis2/openhie/resources/: mcsd.py  svcm.py
examples/: dhis2-play-inventory.json  dhis2-play-inventory.yml  mcsd-config.json  mcsd-config.yml  svcm-config.json  (+1 more)
(+13 files in other folders)
